--- a/static/css/incident_management.css
+++ b/static/css/incident_management.css
@@ -329,12 +329,13 @@ main {
   font-weight: 500;
 }
 
-.top-nav-item input {
+.top-nav-item select {
   margin-right: 20px;
   vertical-align: middle;
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #484848;
+  height: 40px;
   outline: none;
   transition: all 0.5s ease;
 }
@@ -495,6 +496,7 @@ hr {
   padding: 40px 0px 20px 0px;
   color: #848484;
   font-size: 0.8rem;
+  border-bottom: 1px solid #848484;
 }
 
 .lower table tr {
