--- a/static/css/login.css
+++ b/static/css/login.css
@@ -77,25 +77,27 @@ body {
 }
 
 .login__container__form__input input {
-    font-size: .9rem;
+    font-size: 1rem;
     padding-left: 10px;
     width: 80%;
-    height: 30px;
-    margin: 20px 0;
-    border: none;
-    border-bottom: 1px solid #ccc;
+    height: 40px;
+    margin: 10px 0;
+    background-color: rgb(204, 204, 204,.2);
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-weight: 500;
     outline: none;
 }
 
 .login__container__form__input input:focus {
-    border-bottom: 1px solid #000;
+    border: 1px solid #000;
 }
 
 .login__container__form__button button {
     width: 30%;
     min-width: 100px;
     margin: 20px 0;
-    padding: 12px;
+    padding: 15px 5px;
     border: none;
     border-radius: 10px;
     background-color: #1a265c;
