--- a/templates/incident_management.html
+++ b/templates/incident_management.html
@@ -17,6 +17,7 @@
       defer
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/downloadjs/1.4.8/download.min.js" defer></script>
     <script src="/static/js/incident_management.js" defer></script>
   </head>
   <body class="primary">
