--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Login</title>
-    <meta name="description" content="Login" />
+    <title>Login | Crest Digitel</title>
+    <meta name="description" content="Welcome to Crest Digitel, please login to continue" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/static/css/login.css" />
     <link rel="icon" href="/static/images/logo.svg" />
@@ -33,7 +33,7 @@
                     </div>
                 </form>
                 <div class="login__container__forgot__password">
-                    <a href="/forgot-password">Forgot password?</a>
+                    <a href="#">Forgot password?</a>
                 </div>
             </div>
         </div>
