--- a/templates/under_construction.html
+++ b/templates/under_construction.html
@@ -210,7 +210,7 @@
           <li class="top-nav-item no-mobile" id="greeting">
             <p class="faded-text no-mobile">
               <span id="greeting-text" class="no-mobile">Good Morning,</span
-              ><span class="highlighted-text no-mobile"> Om Mishra</span>
+              ><span class="highlighted-text no-mobile">User</span>
             </p>
             <p class="faded-text-small no-mobile">
               Be more productive with actionable insights and tools
